--- a/src/app/company/company.component.html
+++ b/src/app/company/company.component.html
@@ -351,15 +351,104 @@
 
 
 
-
+                <!-- products section -->
                 <div class="products-container nav-content-container" [ngClass]="{show: selectedMenu=='Products'}">
-                    Products
+                    <div class="our-products-inner-section">
+                        <div class="carosal-container">
+                            <div class="prev-icon"><mat-icon class="nav-before" >navigate_before</mat-icon><mat-icon class="nav-before" style="margin-left: -33px;">navigate_before</mat-icon></div>
+                            <div class="main-image">
+                                <img src="../../assets/images/verna.jpeg" alt="">
+                            </div>
+                            <div class="next-icon"><mat-icon class="nav-next" >navigate_next</mat-icon><mat-icon class="nav-next" style="margin-left: -33px;">navigate_next</mat-icon></div>
+                        </div>
+                        <div class="products-card-container">
+                            <div class="products-card">
+                                <div class="products-image">
+                                    <img src="../../assets/images/alcasar.jpeg" alt="" srcset="">
+                                </div>
+                                <div class="prducts-name">Seat cover</div>
+                            </div>
+                            <div class="products-card">
+                                <div class="products-image">
+                                    <img src="../../assets/images/alcasar.jpeg" alt="" srcset="">
+                                </div>
+                                <div class="prducts-name">Seat cover</div>
+                            </div>
+                            <div class="products-card">
+                                <div class="products-image">
+                                    <img src="../../assets/images/alcasar.jpeg" alt="" srcset="">
+                                </div>
+                                <div class="prducts-name">Seat cover</div>
+                            </div>
+                            <div class="products-card">
+                                <div class="products-image">
+                                    <img src="../../assets/images/alcasar.jpeg" alt="" srcset="">
+                                </div>
+                                <div class="prducts-name">Seat cover</div>
+                            </div>
+                            <div class="products-card">
+                                <div class="products-image">
+                                    <img src="../../assets/images/alcasar.jpeg" alt="" srcset="">
+                                </div>
+                                <div class="prducts-name">Seat cover</div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
+                <!-- products section -->
+
+                <!-- certification section -->
+
                 <div class="certification-container nav-content-container" [ngClass]="{show: selectedMenu=='Certification'}">
-                    Certification
+                    <div class="certification-inner-section" style="padding: 40px 20px;" >
+                        <div class="certificate-container" >
+
+                            <div class="certification">
+                                <div class="swing">
+                                    <img  src="../../assets/images/iso.jpeg" >
+                                </div> 
+                            </div>
+
+                            <div class="certification">
+                                <div class="swing">
+                                    <img  src="../../assets/images/tuv-certificate.jpeg" >
+                                </div> 
+                            </div>
+
+                        </div>
+                    </div>
                 </div>
+
+                <!-- certification section -->
+
+
+
                 <div class="strengths-container nav-content-container" [ngClass]="{show: selectedMenu=='Strengths'}">
-                    Strengths
+                    
+                    <div class="strengths-inner-sction">
+                        <div class="strength-img-container">
+                            <div class="strength-img">img</div>
+                        </div>
+                        <div class="strength-content-container">
+                            <div class="workforce-container">
+                                <div class="number-sec">15 </div>
+                                <div class="detail-sec">Total staffs and customer support</div>
+                            </div>
+                            <div class="workforce-container">
+                                <div class="number-sec">120 </div>
+                                <div class="detail-sec">Total Workforce</div>
+                            </div>
+                            <div class="workforce-container">
+                                <div class="number-sec">100 </div>
+                                <div class="detail-sec">Facilities with</div>
+                            </div>
+                            <div class="workforce-container">
+                                <div class="number-sec">3 </div>
+                                <div class="detail-sec">Clients</div>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
                 
 
