fixed the responsive design

--- a/src/app/company/company.component.html
+++ b/src/app/company/company.component.html
@@ -427,7 +427,7 @@
                     
                     <div class="strengths-inner-sction">
                         <div class="strength-img-container">
-                            <div class="strength-img">img</div>
+                            <div class="strength-img"> <img src="../../assets/images/office-strength.jpeg" alt="" srcset=""> </div>
                         </div>
                         <div class="strength-content-container">
                             <div class="workforce-container">
