--- a/src/app/company/company.component.scss
+++ b/src/app/company/company.component.scss
@@ -184,13 +184,14 @@
 }
 .nav-btn{
     padding: 5px 20px;
-    min-width: 60px;
+    width: 120px;
     text-align: center;
     border-radius: 10px;
     box-shadow: 0 0 8px 2px rgba(0, 0, 0, 0.1);
     cursor: pointer;
     font-size: 14px;
     font-weight: 500;
+    text-align: center;
 }
 .nav-btn:hover{ 
     box-shadow: 0 0 8px 2px rgba(44, 181, 191, 0.3);
@@ -294,6 +295,7 @@ img{
     gap: 20px;
     justify-content: center;
     width: 100%;
+    flex-wrap: wrap;
 }
 .quote-symbol{
     position: absolute;
@@ -362,6 +364,7 @@ img{
     align-items: center;
     flex-wrap: wrap;
     margin-top: 30px;
+    justify-content: center;
 }
 .prev-icon{
     position: absolute;
@@ -426,10 +429,10 @@ body {background: #eee;}
     background: #2cb5bf;
 }
 .certificate-container{
-    
     display: flex;
     justify-content: center;
-    gap: 40px
+    gap: 40px;
+    flex-wrap: wrap;
 }
 .certification{
     position: relative;
@@ -439,7 +442,7 @@ body {background: #eee;}
 }
 .strengths-inner-sction{
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-around;
     gap: 40px;
     align-items: center;
 }
@@ -449,7 +452,6 @@ body {background: #eee;}
     align-items: center;
     width: 300px;
     height: 300px;
-    background-color: grey;
 }
 .strength-content-container{
     display: flex;
@@ -498,6 +500,35 @@ body {background: #eee;}
     .board-members-container{
         max-width: 95%;
     }
+    .carosal-container .main-image{
+        width: 400px;
+    }
+ }
+
+ @media screen and (max-width:760px){
+    .section-nav-container{
+        width: 90%;
+        overflow: scroll;
+        padding: 10px 5px;
+        margin: 0px 30px;
+    }
+    .carosal-container .main-image{
+        width: 350px;
+    }
+    .strengths-inner-sction{
+        flex-direction: column;
+        gap: 0px;
+    }
+ }
+
+ @media screen and (max-width:660px){
+    .cpcs-inner-container{
+        padding: 30px 0px
+    }
+    .carosal-container .main-image{
+        width: 300px;
+    }
+
  }
 
  @media screen and (max-width:580px){
@@ -508,4 +539,37 @@ body {background: #eee;}
     .aim-header{
         width: 100%;
     }
+    
+    .client-inner-container, .our-products-inner-section, .certification-inner-section, .strengths-inner-sction{
+        width: 89%;
+        align-items: center;
+    }
+    .client-description{
+        text-align: center;
+    }
+    .client-title{
+        font-size: 21px;
+        line-height: 25px;
+        font-weight: 400;
+    }
+ }
+
+ @media screen and (max-width:450px){
+    .cpcs-inner-container{
+        padding: 30px 0px
+    }
+    .carosal-container .prev-icon{
+        left: -20px;
+    }
+    .carosal-container .next-icon{
+        right: -20px;
+    }
+    .carosal-container .main-image{
+        width: 250px;
+    }
+    .products-card-container .products-image{
+        width: 150px;
+        height: 150px;
+    }
+    
  }
