--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -336,6 +336,10 @@ to{
         width: 85%;
         top: -2%;
     }
+    .technology-container{
+        background-attachment: unset;
+        background-size: auto;
+    }
  }
 
  @media screen and (max-width:380px){
