update the our culture content

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -35,9 +35,7 @@
                                 Our Culture
                             </div>
                             <div class="content">
-                                Our diverse team of talented employees in 37 countries is driven by a commitment to innovation, 
-                                operational excellence, and sustainability as we live our values to Be Inclusive, Be Inventive, 
-                                and Get Results the Right Way.
+                                At Jun Auto, our culture is more than just a buzzword; it's the heartbeat of our success. Here, we foster a dynamic environment that thrives on innovation, collaboration, and a shared dedication to excellence.
                             </div>
                         </div>
                     </div>
