Added the tech component ui

--- a/src/app/technology/technology.component.html
+++ b/src/app/technology/technology.component.html
@@ -1,1 +1,63 @@
-<p>technology works!</p>
+
+<div class="tech-tab-main-container">
+
+    <section class="technology-inner-container">
+        <div class="pair pair1">
+            <div class="image-container">
+                    <div class="row row1">
+                        <div class="image-card">
+                            <div class="inner-image">
+                                <img src="../../assets/images/creta.jpeg" alt="">
+                            </div>
+                        </div>
+                        <div class="image-card">
+                            <div class="inner-image">
+                                <img src="../../assets/images/alcasar.jpeg" alt="">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row row2">
+                        <div class="image-card">
+                            <div class="inner-image">
+                                <img src="../../assets/images/creta.jpeg" alt="">
+                            </div>
+                        </div>
+                        <div class="image-card">
+                            <div class="inner-image">
+                                <img src="../../assets/images/alcasar.jpeg" alt="">
+                            </div>
+                        </div>
+                    </div>
+            </div>
+            <div class="content-container">
+                <div class="inner-content">
+                    <div class="inner-content-heading">
+                        Lorem Ipsum
+                    </div>
+                    <div class="inner-content-body">
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+                        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+                        when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
+                        It has survived not only five centuries
+                    </div>
+                </div>
+            </div>
+            <div class="prev-icon" ><mat-icon class="nav-before nb1" >navigate_before</mat-icon><mat-icon class="nav-before nb2" >navigate_before</mat-icon></div>
+            <div class="next-icon" ><mat-icon class="nav-next nn1"  >navigate_next</mat-icon><mat-icon class="nav-next nn2">navigate_next</mat-icon></div>
+            <div class="dot-nav-container">
+                <div class="dot dotActive">
+                </div>
+                <div class="dot">
+                </div>
+                <div class="dot">
+                </div>
+                <div class="dot">
+                </div>
+                <div class="dot">
+                </div>
+            </div>
+        </div>
+
+    </section>
+
+</div>
