--- a/src/app/technology/technology.component.scss
+++ b/src/app/technology/technology.component.scss
@@ -21,12 +21,69 @@ img{
 }
 .pair{
     display: flex;
-    align-items: center;
     gap: 10px;
     position: relative;
-    width: 100%;
+    margin: 22px 30px;
+    justify-content: center;
 }
 .image-container{
+    display: flex;
+    width: 65%;
+    justify-content: center;
+    align-items: center;
+    z-index: 1;
+    position: relative;
+    overflow: hidden;
+    border-radius: 12px;
+    padding: 10px;
+    
+}
+.image-inner-container{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    border-radius: 12px;
+    box-shadow: 3px 3px 9px rgba(0, 0, 0, 0.8);
+    background-color: #620662;
+    animation-name: slide-left;
+    animation-duration: 0.5s;
+    animation-timing-function: ease;
+    animation-iteration-count: 1;
+    padding: 20px 0px;
+    gap: 10px;
+}
+.content-container{
+    padding: 30px;
+    width: 35%;
+    position: relative;
+    z-index: 0;
+    margin-left: -57px;
+    overflow: hidden;
+}
+.inner-content{
+    background-color: #fff;
+    border-radius: 12px;
+    animation-name: slide-left;
+    animation-duration: 0.8s;
+    animation-timing-function: ease-in-out;
+    animation-iteration-count: 1;
+}
+.inner-content-heading{
+    font-size: 20px;
+    font-weight: bold;
+    line-height: 22px;
+    margin: 30px;
+}
+.inner-content-body{
+    font-size: 15px;
+    font-weight: 400;
+    margin-top: 12px;
+    margin: 0px 30px;
+}
+
+/*.image-container{
     display: flex;
     flex-direction: column;
     gap: 10px;
@@ -65,12 +122,12 @@ img{
 .technology-inner-container{
     padding: 30px 30px 41px 30px;
     background-color: #e7e6e6;
-}
+}*/
 .prev-icon{
     position: absolute;
     display: flex;
     color: #979797;
-    left: -9px;
+    left: 3px;
     top: 50%;
     cursor: pointer;
     z-index: 3;
@@ -85,7 +142,7 @@ img{
     position: absolute;
     display: flex;
     color: #979797;
-    right: -11px;
+    right: 24px;
     top: 50%;
     cursor: pointer;
     z-index: 3;
@@ -97,7 +154,7 @@ img{
 }
 .dot-nav-container{
     position: absolute;
-    bottom: -36px;
+    bottom: -16px;
     right: 50%;
     display: flex;
     justify-content: center;
@@ -130,108 +187,102 @@ img{
     margin-left: -33px;
 }
 
-@media screen and (max-width:1250px){
-   .content-container{
-        width: 30%;
-        padding: 20px 42px 20px 71px;
-
-   }
- }
-
- @media screen and (max-width:820px){
-    .inner-image{
-        width: 174px;
-        height: 100px;
+@keyframes slide-left {
+    0%{
+        transform: translateX(102%);
     }
-    .content-container{
-        width: 33%;
-        height: 70%;
+    100%{
+        transform: translateX(0%);
+    }
+}
+
+
+
+ @media screen and (max-width:841px){
+    .pair{
+        margin: 22px 0px;
+    }
+    .row{
+        width: 89%;
         overflow: scroll;
-        align-items: flex-start;
-        padding-left: 38px;
+        justify-content: start;
+        scrollbar-width: none;
     }
-    .image-container{
-        width: 50%;
+    .row::-webkit-scrollbar{
+        width: 0;
+        height: 0;
     }
-    .technology-inner-container{
-        padding: 30px 10px 41px 10px;
-    }
+  }
+
+  @media screen and (max-width:550px){
     .inner-content-heading{
-        font-size: 17px;
+        font-size: 15px;
+        margin-bottom: 10px;
     }
     .inner-content-body{
         font-size: 13px;
     }
-  }
-
-  @media screen and (max-width:650px){
-    .row{
-        overflow-x: scroll;
-        align-items: flex-start;
-        justify-content: flex-start;
-        overflow-y: hidden;
-        gap: 5px;
- 
+    .content-container .inner-content{
+        overflow-y: scroll;
     }
-    .image-container{
-        width: 50%;
-    }
-    .content-container{
-        width: 30%;
-        padding-left: 65px;
-    }
-  }
-
-  @media screen and (max-width:520px){
     .inner-image{
-        width: 188px;
+        height: 153px;
     }
-    // .nav-before,.nav-next{
-    //     font-size: 32px;
-    // }
+    .image-inner-container{
+        padding: 10px;
+        gap: 10px;
+    }
     .image-container{
-        width: 48%;
-        padding: 20px 10px 20px 32px;
+        width: 58%;
+        margin-right: -46px;
     }
     .content-container{
-        padding: 10px 20px 10px 19px;
-        width: 34%;
+        margin-left: -16px;
+        padding-right: 0px;
+        width: 37%;
+    }
+  }
+
+  @media screen and (max-width:450px){
+    .next-icon{
+        right: 0px;
     }
     .inner-content-heading{
-        font-size: 15px;
+        font-size: 13px;
+        line-height: 15px;
+    }
+    .inner-image{
+        height: 150px;
+        width: 150px;
     }
     .inner-content-body{
-        font-size: 12px;
+        font-size: 11px;
     }
-    .nav-before,.nav-next{
-        font-size: 32px;
+    .image-inner-container{
+        width: 92%;
     }
-    .nb2,.nn2{
-        margin-left: -38px;
+    .image-container{
+        margin-right: 0px;
+        padding-left: 0px;
     }
-    .prev-icon{
-        left: -1px;
+    .pair{
+        gap: 0px;
     }
-    .next-icon{
-        right: -1px;
+   
+    .content-container{
+        margin-left: -31px;
+        width: 40%;
+        padding-left: 0px;
+    }
+    .content-container .inner-content{
+        max-height: 290px;
     }
     
 
   }
 
-  @media screen and (max-width:390px) {
-    .inner-image{
-        width: 150px;
-    }
-    .content-container{
-        width: 30%;
-        top: 24px;
-    }
-    .dot{
-        width: 8px;
-        height: 5px;
-    }
-    .dotActive{
-        width: 16px;
+  @media screen and (max-width:350px) {
+    .image-inner-container{
+        width: 88%;
     }
   }
