update the slider design

--- a/src/app/technology/technology.component.html
+++ b/src/app/technology/technology.component.html
@@ -30,8 +30,9 @@
                                 {{item.contentHeading}}
                             </div>
                             <div class="inner-content-body">
-                            {{item.content}}
+                            {{item.content}} ...<span class="viewmore-link" >View more</span>
                             </div>
+                            
                         </div>
                     </div>
                 
